# agenda-artronea

./: .gitignore  README.md  Turnos.py  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
pages/: 1_Pacientes.py  2_Estadisticas.py
